Fix vertical alignment of highlighted text in address modal
The address validation modal was displaying incorrectly when
Romanian addresses with additional information were entered. The
red highlighted text (endereco-span--remove) appeared misaligned
vertically, appearing above the baseline instead of properly
aligned with the surrounding text.

This visual issue made the modal look broken and affected user
experience when reviewing address suggestions. The problem was
caused by using display: inline-block which created formatting
context issues.

Changing to display: inline allows the element to behave as
text and align naturally with the baseline, fixing the visual
alignment problem.

--- a/themes/components/_predictions-modal.scss
+++ b/themes/components/_predictions-modal.scss
@@ -537,10 +537,11 @@
 
 	&--original {
 		.endereco-span--remove {
-			display: inline-block;
+			display: inline;
 			background-color: rgba(255, 0, 0, 0.125);
 			border-bottom: 1px solid red;
 			padding: 0 3px;
+			vertical-align: baseline;
 		}
 
 		.endereco-span--add {
